fix for hamburger menu location on mobile

--- a/docs/index.css
+++ b/docs/index.css
@@ -192,6 +192,10 @@ a {
 		margin-top: 20px;
 	}
 
+	#menuToggle {
+		top: 16px;
+	}
+
 	.links-container {
 		flex-direction: column;
 		align-items: normal;
